makin some changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Jordan's Amazing Website</title>
+        <title>Jordan's Website</title>
         <style>
             body {
                 background: rgb(255, 210, 183);
