--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
     <body>
         <div id="all-contents">
             <nav>
-                <header>Jordan's Awesome Website</header>
+                <header>Jordan's Website</header>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
